# TestYadro

./: CMakeLists.txt  README.MD  settings
includes/: ITape.h
src/: CMakeLists.txt  main.cpp
src/objects/: Settings.cpp  Settings.h  Sort.cpp  Sort.h  Tape.cpp  Tape.h
testData/: TestInput_100  TestInput_1000  TestInput_10000  TestInput_100000
