cmake_minimum_required (VERSION 3.5)

project (TestYadro LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)


set (INCLUDE_PATH
    "${CMAKE_SOURCE_DIR}/includes")

set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${TestYadro_BINARY_DIR}/build")

file (COPY "${CMAKE_SOURCE_DIR}/settings"
    DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

file (GLOB INPUT_TEST_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/testData/TestInput_*")

file (COPY ${INPUT_TEST_FILES}
    DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
add_subdirectory (src)
